# toyfst-reader

./: .envrc  Cargo.toml  build.rs  flake.nix
assets/: wave.fst
nix/: fst2pprof.nix  overlay.nix
src/: main.rs  pprof.rs  profile.proto
