[package]
name = "toyfst"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fst-native = { git = "https://github.com/Avimitin/fst-native", branch = "dev" }
clap = { version = "4.4", features = [ "derive" ] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [ "env-filter" ]  }
anyhow = "1.0"
serde = { version = "1.0", features = [ "derive" ]  }
serde_json = "1.0"
